--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@discordjs/opus": "^0.5.0",
     "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
+    "ffmpeg-static": "^4.3.0",
     "fs": "*",
     "opusscript": "^0.0.8",
     "yt-search": "^2.7.6",
