--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "ffmpeg-static": "^4.3.0",
     "fs": "*",
+    "nodemon": "^2.0.7",
     "opusscript": "^0.0.8",
     "yt-search": "^2.7.6",
     "ytdl-core": "^4.5.0"
